Name:                virthualenv

Version:             0.2

Synopsis:            Virtual Haskell Environment builder

Description:         virthualenv is a tool (inspired by Python's virtualenv) to create isolated Haskell environments.
                     .
                     It creates a sandboxed environment in a .virthualenv/ directory, which, when activated,
                     allows you to use regular Haskell tools (ghc, ghci, ghc-pkg, cabal) to manage your Haskell
                     code and environment. It's possible to create an environment, that uses different GHC version
                     than your currently installed. virthualenv is supposed to be easier to learn (and use) than
                     similar packages (like cabal-dev or capri).
                     .
                     Basic usage.
                     .
                     First, choose a directory where you want to keep your sandboxed Haskell environment,
                     usually a good choice is a directory containing your cabalized project (if you want to work
                     on a few projects (perhaps an app and its dependent library), just choose any of them,
                     it doesn't really matter). Enter that directory:
                     .
                     > cd ~/projects/foo
                     .
                     Next, create your new isolated Haskell environment (this is a one time only (per environment) step):
                     .
                     > virthualenv
                     .
                     Now, every time you want to use this enviroment, you have to activate it:
                     .
                     > source .virthualenv/bin/activate
                     .
                     That's it! Now it's possible to use all regular Haskell tools like usual, but it won't affect
                     your global/system's Haskell environment, and also your per-user environment (from ~/.cabal and
                     ~/.ghc) will stay the same. All cabal-installed packages will be private to this environment,
                     and also the external environments (global and user) will not affect it (this environment
                     will only inherit very basic packages - mostly ghc and Cabal and their deps).
                     .
                     When you're done working with this environment, enter command 'deactivate',
                     or just close the current shell (with exit).
                     .
                     > deactivate
                     .
                     Advanced usage.
                     .
                     The only advanced usage is using different GHC version. This can be useful to test your code
                     against different GHC version (even against nightly builds).
                     .
                     First, download binary distribution of GHC for your platform
                     (e.g. ghc-7.0.4-i386-unknown-linux.tar.bz2), then create a new environment using that GHC
                     .
                     > virthualenv --ghc=/path/to/ghc_something.tar.bz2
                     .
                     Then, proceed (with [de]activation) as in basic case.
                     .
                     Misc.
                     .
                     virthualenv has been tested on i386 Linux systems, but it should work on any Posix platform.
                     External (from tarball) GHC feature requires binary GHC distribution compiled for your platform,
                     that can be extracted with tar and installed with "./configure --prefix=PATH; make install".
                     .
                     For more info please consult "virthualenv --help" or the attached README file.

Homepage:            https://github.com/Paczesiowa/virthualenv

License:             BSD3

License-file:        LICENSE

Author:              Bartosz Ćwikłowski

Maintainer:          paczesiowa@gmail.com

Copyright:           (c) 2011 Bartosz Ćwikłowski

Category:            Development

Build-type:          Simple

Stability:           alpha

Bug-reports:         https://github.com/Paczesiowa/virthualenv/issues

Package-url:         http://hackage.haskell.org/package/virthualenv

Tested-with:         GHC == 6.12.3, GHC == 7.0.4

Data-files:          virthualenv.el, README.md

Extra-source-files:  skeletons/activate, skeletons/cabal, skeletons/cabal_config

Cabal-version:       >=1.6

Executable virthualenv

  Main-is: virthualenv.hs

  Hs-source-dirs: src

  Ghc-options: -threaded -Wall

  Build-depends: base >= 4.2.0.0 && < 4.5
               , process >= 1.0.1.2 && < 1.2
               , filepath >= 1.1.0.3 && < 1.3
               , directory >= 1.0.1.0 && < 1.2
               , Cabal >= 1.8.0.6 && < 1.13
               , mtl >= 1.1.0.2 && < 2.1
               , bytestring >= 0.9.1.7 && < 0.10
               , file-embed >= 0.0.4.1 && < 0.1
               , split >= 0.1.4 && < 0.2
               , safe >= 0.3 && < 0.4

  Other-modules: Util.Cabal
               , Util.Template
               , Util.IO
               , Skeletons
               , Types
               , MyMonad
               , Args
               , Paths
               , SanityCheck
               , Process
               , PackageManagement
               , Actions

Source-repository head
  Type:     git
  Location: git://github.com/Paczesiowa/virthualenv.git
